// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders study releases view -- shows an error 1`] = `
<div>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
      <a
        class="item"
        href="/"
      >
        Investigator Studies
      </a>
      <a
        class="item"
        href="/research-studies"
      >
        Research Studies
      </a>
      <div
        class="right menu"
      >
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          <img
            alt="bendolly"
            class="ui avatar image"
            src="https://lh3.googleusercontent.com/-7Agefge42sw/AAAAAAAAAAI/AAAAAAAAAAA/ACHi3reWt8KI4nO_arpKCb4FzokaKnLgtg/mo/photo.jpg"
          />
          bendolly
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/profile"
              role="option"
            >
              <i
                aria-hidden="true"
                class="user icon"
              />
              Profile
            </a>
            <a
              class="item"
              href="/logout"
              role="option"
            >
              <i
                aria-hidden="true"
                class="log out icon"
              />
              Logout
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="page"
  >
    <section
      id="study"
    >
      <div
        class="ui basic secondary segment"
      >
        <div
          class="ui container"
        >
          <h1
            class="ui header"
          >
            benchmark extensible e-business
          </h1>
          <button
            class="ui tiny basic icon button"
          >
            <i
              aria-hidden="true"
              class="copy icon"
            />
            SD_8WX8QQ06
          </button>
        </div>
      </div>
      <div
        class="ui container"
      >
        <div
          class="ui pink pointing secondary menu"
        >
          <a
            class="item"
            href="/study/SD_8WX8QQ06/basic-info/info"
          >
            Basic Info
          </a>
          <a
            class="item"
            href="/study/SD_8WX8QQ06/documents"
          >
            Documents
          </a>
          <a
            class="item"
            href="/study/SD_8WX8QQ06/cavatica"
          >
            Cavatica
          </a>
          <a
            class="item"
            href="/study/SD_8WX8QQ06/logs"
          >
            Logs
          </a>
          <a
            aria-current="page"
            class="active item active"
            href="/study/SD_8WX8QQ06/releases"
          >
            Releases
          </a>
        </div>
      </div>
    </section>
    <div
      class="ui basic segment ui container"
    >
      <div
        class="ui icon negative message"
      >
        <i
          aria-hidden="true"
          class="warning circle icon"
        />
        <div
          class="content"
        >
          <div
            class="header"
          >
            Error
          </div>
          <p>
            Network error: Failed to fetch releases information
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ui segment footer"
  >
    <div
      class="ui container text-10"
    >
      <div
        class="ui horizontal list"
        role="list"
      >
        <div
          class="item"
          role="listitem"
        >
          <div
            class="ui basic horizontal label text-10"
          />
        </div>
        <div
          class="item"
          role="listitem"
        >
          UI
           
          <a
            href="https://github.com/kids-first/kf-ui-data-tracker/commit/undefined"
            rel="noopener noreferrer"
            target="_blank"
          />
        </div>
        <div
          class="item"
          role="listitem"
        >
          Study Creator API
           
          <a
            href="https://github.com/kids-first/kf-api-study-creator/commit/283efc9"
            rel="noopener noreferrer"
            target="_blank"
          >
            1.7.2-25-g283efc9
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders study releases view correctly --  showing empty view for non-admin user 1`] = `
<div>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
      <a
        class="item"
        href="/"
      >
        Investigator Studies
      </a>
      <a
        class="item"
        href="/research-studies"
      >
        Research Studies
      </a>
      <div
        class="right menu"
      >
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          <img
            alt="bendolly"
            class="ui avatar image"
            src="https://lh3.googleusercontent.com/-7Agefge42sw/AAAAAAAAAAI/AAAAAAAAAAA/ACHi3reWt8KI4nO_arpKCb4FzokaKnLgtg/mo/photo.jpg"
          />
          bendolly
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/profile"
              role="option"
            >
              <i
                aria-hidden="true"
                class="user icon"
              />
              Profile
            </a>
            <a
              class="item"
              href="/logout"
              role="option"
            >
              <i
                aria-hidden="true"
                class="log out icon"
              />
              Logout
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="page"
  >
    <section
      id="study"
    >
      <div
        class="ui basic secondary segment"
      >
        <div
          class="ui container"
        >
          <h1
            class="ui header"
          >
            benchmark extensible e-business
          </h1>
          <button
            class="ui tiny basic icon button"
          >
            <i
              aria-hidden="true"
              class="copy icon"
            />
            SD_8WX8QQ06
          </button>
        </div>
      </div>
      <div
        class="ui container"
      >
        <div
          class="ui pink pointing secondary menu"
        >
          <a
            class="item"
            href="/study/SD_8WX8QQ06/basic-info/info"
          >
            Basic Info
          </a>
          <a
            class="item"
            href="/study/SD_8WX8QQ06/documents"
          >
            Documents
          </a>
          <a
            class="item"
            href="/study/SD_8WX8QQ06/cavatica"
          >
            Cavatica
          </a>
          <a
            class="item"
            href="/study/SD_8WX8QQ06/logs"
          >
            Logs
          </a>
          <a
            aria-current="page"
            class="active item active"
            href="/study/SD_8WX8QQ06/releases"
          >
            Releases
          </a>
        </div>
      </div>
    </section>
    <div
      class="ui basic very padded segment ui container"
    >
      <h2
        class="ui disabled center aligned header"
      >
        <i
          aria-hidden="true"
          class="ban icon"
        />
        You don’t have access to this page.
      </h2>
    </div>
  </div>
  <div
    class="ui segment footer"
  >
    <div
      class="ui container text-10"
    >
      <div
        class="ui horizontal list"
        role="list"
      >
        <div
          class="item"
          role="listitem"
        >
          <div
            class="ui basic horizontal label text-10"
          />
        </div>
        <div
          class="item"
          role="listitem"
        >
          UI
           
          <a
            href="https://github.com/kids-first/kf-ui-data-tracker/commit/undefined"
            rel="noopener noreferrer"
            target="_blank"
          />
        </div>
        <div
          class="item"
          role="listitem"
        >
          Study Creator API
           
          <a
            href="https://github.com/kids-first/kf-api-study-creator/commit/283efc9"
            rel="noopener noreferrer"
            target="_blank"
          >
            1.7.2-25-g283efc9
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders study releases view correctly 1`] = `
<div>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
    </div>
  </div>
  <div
    class="page"
  >
    <section
      id="study"
    >
      <div
        class="ui basic secondary segment"
      >
        <div
          class="ui container"
        >
          <div
            class="ui placeholder"
          >
            <div
              class="header"
            >
              <div
                class="line"
              />
              <div
                class="line"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="ui container"
      >
        <div
          class="ui pink pointing secondary menu"
        >
          <a
            class="item"
            href="/study/SD_8WX8QQ06/basic-info/info"
          >
            Basic Info
          </a>
          <a
            class="item"
            href="/study/SD_8WX8QQ06/documents"
          >
            Documents
          </a>
          <a
            class="item"
            href="/study/SD_8WX8QQ06/cavatica"
          >
            Cavatica
          </a>
          <a
            class="item"
            href="/study/SD_8WX8QQ06/logs"
          >
            Logs
          </a>
          <a
            aria-current="page"
            class="active item active"
            href="/study/SD_8WX8QQ06/releases"
          >
            Releases
          </a>
        </div>
      </div>
    </section>
    <div
      class="ui basic vertical segment ui container"
    >
      <div
        class="ui placeholder"
      >
        <div
          class="image header"
        >
          <div
            class="line"
          />
          <div
            class="line"
          />
        </div>
        <div
          class="paragraph"
        >
          <div
            class="line"
          />
          <div
            class="line"
          />
          <div
            class="line"
          />
          <div
            class="line"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="ui segment footer"
  >
    <div
      class="ui container text-10"
    >
      <div
        class="ui horizontal list"
        role="list"
      >
        <div
          class="item"
          role="listitem"
        >
          <div
            class="ui basic horizontal label text-10"
          />
        </div>
        <div
          class="item"
          role="listitem"
        >
          UI
           
          <a
            href="https://github.com/kids-first/kf-ui-data-tracker/commit/undefined"
            rel="noopener noreferrer"
            target="_blank"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders study releases view correctly 2`] = `
<div>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
      <a
        class="item"
        href="/"
      >
        Investigator Studies
      </a>
      <a
        class="item"
        href="/research-studies"
      >
        Research Studies
      </a>
      <div
        class="right menu"
      >
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          Admin
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/configuration"
              role="option"
            >
              <i
                aria-hidden="true"
                class="settings icon"
              />
              Configuration
            </a>
            <a
              class="item"
              href="/buckets"
              role="option"
            >
              <i
                aria-hidden="true"
                class="trash icon"
              />
              Buckets
            </a>
            <a
              class="item"
              href="/tokens"
              role="option"
            >
              <i
                aria-hidden="true"
                class="key icon"
              />
              Developer Tokens
            </a>
            <a
              class="item"
              href="/cavatica-projects"
              role="option"
            >
              <i
                aria-hidden="true"
                class="folder open icon"
              />
              Cavatica Projects
            </a>
            <a
              class="item"
              href="/events"
              role="option"
            >
              <i
                aria-hidden="true"
                class="history icon"
              />
              Event Log
            </a>
            <a
              class="item"
              href="/users"
              role="option"
            >
              <i
                aria-hidden="true"
                class="users icon"
              />
              Users
            </a>
          </div>
        </div>
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          <img
            alt="bendolly"
            class="ui avatar image"
            src="https://lh3.googleusercontent.com/-7Agefge42sw/AAAAAAAAAAI/AAAAAAAAAAA/ACHi3reWt8KI4nO_arpKCb4FzokaKnLgtg/mo/photo.jpg"
          />
          bendolly
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/profile"
              role="option"
            >
              <i
                aria-hidden="true"
                class="user icon"
              />
              Profile
            </a>
            <a
              class="item"
              href="/logout"
              role="option"
            >
              <i
                aria-hidden="true"
                class="log out icon"
              />
              Logout
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="page"
  >
    <section
      id="study"
    >
      <div
        class="ui basic secondary segment"
      >
        <div
          class="ui container"
        >
          <h1
            class="ui header"
          >
            benchmark extensible e-business
          </h1>
          <button
            class="ui tiny basic icon button"
          >
            <i
              aria-hidden="true"
              class="copy icon"
            />
            SD_8WX8QQ06
          </button>
        </div>
      </div>
      <div
        class="ui container"
      >
        <div
          class="ui pink pointing secondary menu"
        >
          <a
            class="item"
            href="/study/SD_8WX8QQ06/basic-info/info"
          >
            Basic Info
          </a>
          <a
            class="item"
            href="/study/SD_8WX8QQ06/documents"
          >
            Documents
          </a>
          <a
            class="item"
            href="/study/SD_8WX8QQ06/cavatica"
          >
            Cavatica
          </a>
          <a
            class="item"
            href="/study/SD_8WX8QQ06/logs"
          >
            Logs
          </a>
          <a
            aria-current="page"
            class="active item active"
            href="/study/SD_8WX8QQ06/releases"
          >
            Releases
            <div
              class="ui blue mini label"
            >
              BETA
            </div>
          </a>
        </div>
      </div>
    </section>
    <div
      class="ui basic vertical segment ui container"
    >
      <h2
        class="ui header mt-6"
      >
        Past Published Releases
      </h2>
      <div
        class="ui large comments"
      >
        <div
          class="comment"
        >
          <i
            aria-hidden="true"
            class="tag icon avatar"
          />
          <div
            class="content"
          >
            <a
              class="author text-blue"
              href="undefinedreleases/RE_FXR1JBZA"
              rel="noopener noreferrer"
              target="_blank"
            >
              3.64.0 - Test ETL 
              <i
                aria-hidden="true"
                class="external small link icon"
              />
            </a>
            <div
              class="metadata"
            >
              on 
              5 Nov 2019
            </div>
            <div
              class="text"
            >
              <h1>
                Header 1
              </h1>
              <ol>
                <li>
                  numbered list
                </li>
                <li>
                  and more
                </li>
              </ol>
              <p>
                <img
                  class="ui image"
                  src="https://imgc.artprintimages.com/img/print/white-bunny-rabbit-wearing-tiara-close-up-studio-shot_u-l-q10d2j30.jpg"
                />
              </p>
              <table
                class="ui table"
              >
                <thead>
                  <tr>
                    <th>
                      Tables
                    </th>
                    <th
                      style="text-align: center;"
                    >
                      Are
                    </th>
                    <th
                      style="text-align: right;"
                    >
                      Cool
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td>
                      col 3 is
                    </td>
                    <td
                      style="text-align: center;"
                    >
                      right-aligned
                    </td>
                    <td
                      style="text-align: right;"
                    >
                      $1600
                    </td>
                  </tr>
                  <tr>
                    <td>
                      col 2 is
                    </td>
                    <td
                      style="text-align: center;"
                    >
                      centered
                    </td>
                    <td
                      style="text-align: right;"
                    >
                      $12
                    </td>
                  </tr>
                  <tr>
                    <td>
                      zebra stripes
                    </td>
                    <td
                      style="text-align: center;"
                    >
                      are neat
                    </td>
                    <td
                      style="text-align: right;"
                    >
                      $1
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
        <div
          class="comment"
        >
          <i
            aria-hidden="true"
            class="tag icon avatar"
          />
          <div
            class="content"
          >
            <a
              class="author text-blue"
              href="undefinedreleases/RE_HPFK6H9Z"
              rel="noopener noreferrer"
              target="_blank"
            >
              3.58.0 - Fix diagnosis 
              <i
                aria-hidden="true"
                class="external small link icon"
              />
            </a>
            <div
              class="metadata"
            >
              on 
              17 Sept 2019
            </div>
            <div
              class="text"
            />
          </div>
        </div>
        <div
          class="comment"
        >
          <i
            aria-hidden="true"
            class="tag icon avatar"
          />
          <div
            class="content"
          >
            <a
              class="author text-blue"
              href="undefinedreleases/RE_X1X0MCSY"
              rel="noopener noreferrer"
              target="_blank"
            >
              3.55.0 - Biospecimens into diagnosis 
              <i
                aria-hidden="true"
                class="external small link icon"
              />
            </a>
            <div
              class="metadata"
            >
              on 
              4 Sept 2019
            </div>
            <div
              class="text"
            />
          </div>
        </div>
        <div
          class="comment"
        >
          <i
            aria-hidden="true"
            class="tag icon avatar"
          />
          <div
            class="content"
          >
            <a
              class="author text-blue"
              href="undefinedreleases/RE_M40RKAKH"
              rel="noopener noreferrer"
              target="_blank"
            >
              3.53.0 - Fix outcome 
              <i
                aria-hidden="true"
                class="external small link icon"
              />
            </a>
            <div
              class="metadata"
            >
              on 
              6 Aug 2019
            </div>
            <div
              class="text"
            />
          </div>
        </div>
        <div
          class="comment"
        >
          <i
            aria-hidden="true"
            class="tag icon avatar"
          />
          <div
            class="content"
          >
            <a
              class="author text-blue"
              href="undefinedreleases/RE_B20Z2QR3"
              rel="noopener noreferrer"
              target="_blank"
            >
              3.52.0 - Fix outcome 
              <i
                aria-hidden="true"
                class="external small link icon"
              />
            </a>
            <div
              class="metadata"
            >
              on 
              1 Aug 2019
            </div>
            <div
              class="text"
            />
          </div>
        </div>
        <div
          class="comment"
        >
          <i
            aria-hidden="true"
            class="tag icon avatar"
          />
          <div
            class="content"
          >
            <a
              class="author text-blue"
              href="undefinedreleases/RE_YD0E9JQT"
              rel="noopener noreferrer"
              target="_blank"
            >
              3.51.0 - Phenotype nested 
              <i
                aria-hidden="true"
                class="external small link icon"
              />
            </a>
            <div
              class="metadata"
            >
              on 
              30 Jul 2019
            </div>
            <div
              class="text"
            />
          </div>
        </div>
        <div
          class="comment"
        >
          <i
            aria-hidden="true"
            class="tag icon avatar"
          />
          <div
            class="content"
          >
            <a
              class="author text-blue"
              href="undefinedreleases/RE_VENNYKVE"
              rel="noopener noreferrer"
              target="_blank"
            >
              3.50.0 - Revert phenotype 
              <i
                aria-hidden="true"
                class="external small link icon"
              />
            </a>
            <div
              class="metadata"
            >
              on 
              25 Jul 2019
            </div>
            <div
              class="text"
            />
          </div>
        </div>
        <div
          class="comment"
        >
          <i
            aria-hidden="true"
            class="tag icon avatar"
          />
          <div
            class="content"
          >
            <a
              class="author text-blue"
              href="undefinedreleases/RE_V6KY1M2F"
              rel="noopener noreferrer"
              target="_blank"
            >
              3.48.0 - Fix family composition 
              <i
                aria-hidden="true"
                class="external small link icon"
              />
            </a>
            <div
              class="metadata"
            >
              on 
              23 Jul 2019
            </div>
            <div
              class="text"
            />
          </div>
        </div>
        <div
          class="comment"
        >
          <i
            aria-hidden="true"
            class="tag icon avatar"
          />
          <div
            class="content"
          >
            <a
              class="author text-blue"
              href="undefinedreleases/RE_4EP89WT7"
              rel="noopener noreferrer"
              target="_blank"
            >
              3.47.0 - Fix family members 
              <i
                aria-hidden="true"
                class="external small link icon"
              />
            </a>
            <div
              class="metadata"
            >
              on 
              22 Jul 2019
            </div>
            <div
              class="text"
            />
          </div>
        </div>
        <div
          class="comment"
        >
          <i
            aria-hidden="true"
            class="tag icon avatar"
          />
          <div
            class="content"
          >
            <a
              class="author text-blue"
              href="undefinedreleases/RE_XQ3XARN3"
              rel="noopener noreferrer"
              target="_blank"
            >
              3.46.0 - Phenotypes nested 
              <i
                aria-hidden="true"
                class="external small link icon"
              />
            </a>
            <div
              class="metadata"
            >
              on 
              17 Jul 2019
            </div>
            <div
              class="text"
            />
          </div>
        </div>
        <div
          class="comment"
        >
          <i
            aria-hidden="true"
            class="tag icon avatar"
          />
          <div
            class="content"
          >
            <a
              class="author text-blue"
              href="undefinedreleases/RE_01JTCGXM"
              rel="noopener noreferrer"
              target="_blank"
            >
              3.41.0 - Test ETL 
              <i
                aria-hidden="true"
                class="external small link icon"
              />
            </a>
            <div
              class="metadata"
            >
              on 
              28 May 2019
            </div>
            <div
              class="text"
            />
          </div>
        </div>
        <div
          class="comment"
        >
          <i
            aria-hidden="true"
            class="tag icon avatar"
          />
          <div
            class="content"
          >
            <a
              class="author text-blue"
              href="undefinedreleases/RE_42XS0PHM"
              rel="noopener noreferrer"
              target="_blank"
            >
              3.40.0 - Test ETL 
              <i
                aria-hidden="true"
                class="external small link icon"
              />
            </a>
            <div
              class="metadata"
            >
              on 
              28 May 2019
            </div>
            <div
              class="text"
            />
          </div>
        </div>
        <div
          class="comment"
        >
          <i
            aria-hidden="true"
            class="tag icon avatar"
          />
          <div
            class="content"
          >
            <a
              class="author text-blue"
              href="undefinedreleases/RE_9R6CJCQR"
              rel="noopener noreferrer"
              target="_blank"
            >
              3.39.0 - Test ETl 
              <i
                aria-hidden="true"
                class="external small link icon"
              />
            </a>
            <div
              class="metadata"
            >
              on 
              24 May 2019
            </div>
            <div
              class="text"
            />
          </div>
        </div>
        <div
          class="comment"
        >
          <i
            aria-hidden="true"
            class="tag icon avatar"
          />
          <div
            class="content"
          >
            <a
              class="author text-blue"
              href="undefinedreleases/RE_SQB0BNM0"
              rel="noopener noreferrer"
              target="_blank"
            >
              3.36.0 - Test aws policy 
              <i
                aria-hidden="true"
                class="external small link icon"
              />
            </a>
            <div
              class="metadata"
            >
              on 
              17 May 2019
            </div>
            <div
              class="text"
            />
          </div>
        </div>
        <div
          class="comment"
        >
          <i
            aria-hidden="true"
            class="tag icon avatar"
          />
          <div
            class="content"
          >
            <a
              class="author text-blue"
              href="undefinedreleases/RE_CZ9C1V4G"
              rel="noopener noreferrer"
              target="_blank"
            >
              3.35.0 - Test Rollcall 
              <i
                aria-hidden="true"
                class="external small link icon"
              />
            </a>
            <div
              class="metadata"
            >
              on 
              15 May 2019
            </div>
            <div
              class="text"
            />
          </div>
        </div>
        <div
          class="comment"
        >
          <i
            aria-hidden="true"
            class="tag icon avatar"
          />
          <div
            class="content"
          >
            <a
              class="author text-blue"
              href="undefinedreleases/RE_6D1C4KQD"
              rel="noopener noreferrer"
              target="_blank"
            >
              3.34.0 - Test ETL 
              <i
                aria-hidden="true"
                class="external small link icon"
              />
            </a>
            <div
              class="metadata"
            >
              on 
              15 May 2019
            </div>
            <div
              class="text"
            />
          </div>
        </div>
        <div
          class="comment"
        >
          <i
            aria-hidden="true"
            class="tag icon avatar"
          />
          <div
            class="content"
          >
            <a
              class="author text-blue"
              href="undefinedreleases/RE_BNFXBYPM"
              rel="noopener noreferrer"
              target="_blank"
            >
              3.33.0 - Test ETL 8 
              <i
                aria-hidden="true"
                class="external small link icon"
              />
            </a>
            <div
              class="metadata"
            >
              on 
              15 May 2019
            </div>
            <div
              class="text"
            />
          </div>
        </div>
        <div
          class="comment"
        >
          <i
            aria-hidden="true"
            class="tag icon avatar"
          />
          <div
            class="content"
          >
            <a
              class="author text-blue"
              href="undefinedreleases/RE_NPKBGKEQ"
              rel="noopener noreferrer"
              target="_blank"
            >
              3.32.0 - Test ETL 7 
              <i
                aria-hidden="true"
                class="external small link icon"
              />
            </a>
            <div
              class="metadata"
            >
              on 
              15 May 2019
            </div>
            <div
              class="text"
            />
          </div>
        </div>
        <div
          class="comment"
        >
          <i
            aria-hidden="true"
            class="tag icon avatar"
          />
          <div
            class="content"
          >
            <a
              class="author text-blue"
              href="undefinedreleases/RE_7XJPEGDZ"
              rel="noopener noreferrer"
              target="_blank"
            >
              3.31.0 - issue-15461 2 
              <i
                aria-hidden="true"
                class="external small link icon"
              />
            </a>
            <div
              class="metadata"
            >
              on 
              2 May 2019
            </div>
            <div
              class="text"
            />
          </div>
        </div>
        <div
          class="comment"
        >
          <i
            aria-hidden="true"
            class="tag icon avatar"
          />
          <div
            class="content"
          >
            <a
              class="author text-blue"
              href="undefinedreleases/RE_W384YPKK"
              rel="noopener noreferrer"
              target="_blank"
            >
              3.30.0 - issue-66 test 3 
              <i
                aria-hidden="true"
                class="external small link icon"
              />
            </a>
            <div
              class="metadata"
            >
              on 
              2 May 2019
            </div>
            <div
              class="text"
            />
          </div>
        </div>
        <div
          class="comment"
        >
          <i
            aria-hidden="true"
            class="tag icon avatar"
          />
          <div
            class="content"
          >
            <a
              class="author text-blue"
              href="undefinedreleases/RE_MDC6Y3S8"
              rel="noopener noreferrer"
              target="_blank"
            >
              3.29.0 - issue-15461 
              <i
                aria-hidden="true"
                class="external small link icon"
              />
            </a>
            <div
              class="metadata"
            >
              on 
              15 Apr 2019
            </div>
            <div
              class="text"
            />
          </div>
        </div>
        <div
          class="comment"
        >
          <i
            aria-hidden="true"
            class="tag icon avatar"
          />
          <div
            class="content"
          >
            <a
              class="author text-blue"
              href="undefinedreleases/RE_BDM6JA10"
              rel="noopener noreferrer"
              target="_blank"
            >
              3.28.0 - dcf externalid-latestdid test 2 
              <i
                aria-hidden="true"
                class="external small link icon"
              />
            </a>
            <div
              class="metadata"
            >
              on 
              10 Apr 2019
            </div>
            <div
              class="text"
            />
          </div>
        </div>
        <div
          class="comment"
        >
          <i
            aria-hidden="true"
            class="tag icon avatar"
          />
          <div
            class="content"
          >
            <a
              class="author text-blue"
              href="undefinedreleases/RE_AKFCSQMZ"
              rel="noopener noreferrer"
              target="_blank"
            >
              3.27.0 - dcf externalid-latestdid test 1 
              <i
                aria-hidden="true"
                class="external small link icon"
              />
            </a>
            <div
              class="metadata"
            >
              on 
              10 Apr 2019
            </div>
            <div
              class="text"
            />
          </div>
        </div>
        <div
          class="comment"
        >
          <i
            aria-hidden="true"
            class="tag icon avatar"
          />
          <div
            class="content"
          >
            <a
              class="author text-blue"
              href="undefinedreleases/RE_3H0P5GY0"
              rel="noopener noreferrer"
              target="_blank"
            >
              3.25.0 - repo fix again 
              <i
                aria-hidden="true"
                class="external small link icon"
              />
            </a>
            <div
              class="metadata"
            >
              on 
              26 Mar 2019
            </div>
            <div
              class="text"
            />
          </div>
        </div>
        <div
          class="comment"
        >
          <i
            aria-hidden="true"
            class="tag icon avatar"
          />
          <div
            class="content"
          >
            <a
              class="author text-blue"
              href="undefinedreleases/RE_VQNNVGD5"
              rel="noopener noreferrer"
              target="_blank"
            >
              3.23.0 - fix repos try 3 
              <i
                aria-hidden="true"
                class="external small link icon"
              />
            </a>
            <div
              class="metadata"
            >
              on 
              26 Mar 2019
            </div>
            <div
              class="text"
            />
          </div>
        </div>
        <div
          class="comment"
        >
          <i
            aria-hidden="true"
            class="tag icon avatar"
          />
          <div
            class="content"
          >
            <a
              class="author text-blue"
              href="undefinedreleases/RE_FA9A6QGK"
              rel="noopener noreferrer"
              target="_blank"
            >
              3.22.0 - redeploy test 2 
              <i
                aria-hidden="true"
                class="external small link icon"
              />
            </a>
            <div
              class="metadata"
            >
              on 
              26 Mar 2019
            </div>
            <div
              class="text"
            />
          </div>
        </div>
        <div
          class="comment"
        >
          <i
            aria-hidden="true"
            class="tag icon avatar"
          />
          <div
            class="content"
          >
            <a
              class="author text-blue"
              href="undefinedreleases/RE_W85M8TFN"
              rel="noopener noreferrer"
              target="_blank"
            >
              3.21.0 - target test 
              <i
                aria-hidden="true"
                class="external small link icon"
              />
            </a>
            <div
              class="metadata"
            >
              on 
              25 Mar 2019
            </div>
            <div
              class="text"
            />
          </div>
        </div>
        <div
          class="comment"
        >
          <i
            aria-hidden="true"
            class="tag icon avatar"
          />
          <div
            class="content"
          >
            <a
              class="author text-blue"
              href="undefinedreleases/RE_QQ6FKPXZ"
              rel="noopener noreferrer"
              target="_blank"
            >
              3.15.0 - Release Target in QA 
              <i
                aria-hidden="true"
                class="external small link icon"
              />
            </a>
            <div
              class="metadata"
            >
              on 
              6 Mar 2019
            </div>
            <div
              class="text"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ui segment footer"
  >
    <div
      class="ui container text-10"
    >
      <div
        class="ui horizontal list"
        role="list"
      >
        <div
          class="item"
          role="listitem"
        >
          <div
            class="ui basic horizontal label text-10"
          />
        </div>
        <div
          class="item"
          role="listitem"
        >
          UI
           
          <a
            href="https://github.com/kids-first/kf-ui-data-tracker/commit/undefined"
            rel="noopener noreferrer"
            target="_blank"
          />
        </div>
        <div
          class="item"
          role="listitem"
        >
          Study Creator API
           
          <a
            href="https://github.com/kids-first/kf-api-study-creator/commit/283efc9"
            rel="noopener noreferrer"
            target="_blank"
          >
            1.7.2-25-g283efc9
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
